--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-fastapi
-uvicorn
-python-dotenv
-aiohttp
-mistralai
-google-generativeai
-anthropic
-openai
-psutil
-netifaces
-scapy
+fastapi>=0.115.0
+uvicorn>=0.32.0
+python-dotenv>=1.0.0
+mistralai>=0.0.11
+anthropic>=0.7.0
+openai>=1.54.0
+google-generativeai>=0.3.0
+speedtest-cli>=2.1.3
+psutil>=5.9.0
+python-multipart>=0.0.6
+typing-extensions>=4.5.0
+pydantic>=2.0.0
