--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi>=0.115.0
 uvicorn>=0.32.0
 python-dotenv>=1.0.0
-mistralai>=0.0.11
+mistralai==0.4.2
 anthropic>=0.7.0
 openai>=1.54.0
 google-generativeai>=0.3.0
